# rdfpytest

./: README.md  pyproject.toml
src/rdfpytest/: __init__.py
