[project]
name = "rdfpytest"
version = "0.1.0"
description = "Framework for running tests over RDF data in Python"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyshacl~=0.30.0",
    "pytest~=8.4.0",
    "rdflib~=7.1.4",
    "rdfnav",
]

[project.scripts]
rdftest = "rdftest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rdfnav = { git = "https://github.com/WEHI-SODA-Hub/RdfNav", rev = "main" }

[project.entry-points.pytest11]
rdfpytest = "rdfpytest"
